--- a/HW2/HW2.2/Dockerfile
+++ b/HW2/HW2.2/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update && apt-get install -yq cmake libopencv-dev
 COPY . /usr/src/2/2.2
 WORKDIR /usr/src/2/2.2
 RUN mkdir build && cd build ** cmake ,, && make
-CMD ./bin/2/2.2
+CMD ./output
